--- a/config.json
+++ b/config.json
@@ -1,8 +1,19 @@
 {
-    "microbit-dal":{
-        "bluetooth": {
-            "enabled": 0
-        },
-        "debug": 0
-    }
+  "microbit-dal": {
+    "bluetooth": {
+      "enabled": 1,
+      "pairing_mode": 1,
+      "private_addressing": 0,
+      "open": 0,
+      "whitelist": 1,
+      "advertising_timeout": 0,
+      "tx_power": 6,
+      "dfu_service": 1,
+      "event_service": 0,
+      "device_info_service": 1,
+      "security_level": "SECURITY_MODE_ENCRYPTION_NO_MITM"
+    },
+    "gatt_table_size": "0x700",
+    "debug": 0
+  }
 }
