--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
       "enabled": 1,
       "pairing_mode": 1,
       "private_addressing": 0,
-      "open": 0,
+      "open": 1,
       "whitelist": 1,
       "advertising_timeout": 0,
       "tx_power": 6,
@@ -13,7 +13,8 @@
       "device_info_service": 1,
       "security_level": "SECURITY_MODE_ENCRYPTION_NO_MITM"
     },
-    "gatt_table_size": "0x700",
-    "debug": 0
+    "gatt_table_size": "0x400",
+    "debug": 1,
+    "heap_debug": 1
   }
 }
