new Calliope Service RGB LED

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,6 +175,7 @@ add_executable(calliope-demo
         source/Slice.h
         source/Storage.h
         source/Utils.cpp
+        source/CalliopeServiceRGB.cpp
 )
 #else()
 #   add_executable(calliope-demo
