new Calliope Services, RGB, LED and Microphone

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,8 @@ add_executable(calliope-demo
         source/Storage.h
         source/Utils.cpp
         source/CalliopeServiceRGB.cpp
+        source/CalliopeServiceLightSensor.cpp
+        source/CalliopeServiceMicrophone.cpp
 )
 #else()
 #   add_executable(calliope-demo
