chapter 5 playbook accelerometer not running yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,6 +178,7 @@ add_executable(calliope-demo
         source/CalliopeServiceRGB.cpp
         source/CalliopeServiceLightSensor.cpp
         source/CalliopeServiceMicrophone.cpp
+        source/PlaygroundFree.cpp
 )
 #else()
 #   add_executable(calliope-demo
