new touchpin service (#CM-7)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,7 +181,9 @@ add_executable(calliope-demo
         source/PlaygroundFree.cpp
         source/CalliopeServiceMaster.cpp
         source/CalliopeServiceSpeaker.cpp
-        source/CalliopeServiceInterpreter.cpp)
+        source/CalliopeServiceInterpreter.cpp
+        source/CalliopeServiceTouchpin.cpp
+        )
 #else()
 #   add_executable(calliope-demo
 #          source/CalliopeTestBoard.cpp
